--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,4 +23,12 @@
 		<servlet-name>SignUpServlet</servlet-name>
 		<url-pattern>/signup</url-pattern>
 	</servlet-mapping>
+	<servlet>
+		<servlet-name>ForgotPasswordServlet</servlet-name>
+		<servlet-class>Controller.ForgotPasswordServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ForgotPasswordServlet</servlet-name>
+		<url-pattern>/forgotpassword</url-pattern>
+	</servlet-mapping>
 </web-app>
